--- a/src/main/resources/templates/names.html
+++ b/src/main/resources/templates/names.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<div th:replace="~{fragments.html :: menu}"></div>
 <p th:text="${randomName}"></p>
 <p>Wszystkie imiona:</p>
 <p th:each="name : ${allNames}" th:text="${name}"></p>
